--- a/Project/client/src/components/NewScroll.css
+++ b/Project/client/src/components/NewScroll.css
@@ -24,16 +24,17 @@ body {
     
     .red {background:red;}
     .yellow {background:yellow;}
-    .blue {background:blue;}
+    .blue {background:blue;}     
     .orange {background:orange;}
     .purple {background:purple;}
     .green {background:green;}
     
     .marquee {
         
-        height: 500px;
+        height:600px;
         width: 250px;
-        border: 2px solid rgb(120, 0, 0);
+        margin-left: 80px;
+        /* border: 2px solid rgb(120, 0, 0); */
         overflow: hidden;
         box-sizing: border-box;
         /* position: absolute;
