--- a/Project/client/src/components/NewScroll.css
+++ b/Project/client/src/components/NewScroll.css
@@ -2,7 +2,7 @@ body {
         margin: 0;
         font-size: smaller;
         font-family: sans-serif;
-        color: #333;
+        color: black;
     }
     
     .orb {
