--- a/Project/client/src/App.css
+++ b/Project/client/src/App.css
@@ -40,3 +40,11 @@
     transform: rotate(360deg);
   }
 }
+.outlined-basic{
+  width: 30%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  height: 40px;
+}
